Fix spacing top main page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,8 +5,7 @@
     background-color: $light;
     padding: $spacing;
     width: 90%;
-    margin-: auto;
-    margin-top: $spacing-l;
+    margin: $spacing auto auto;
 
     .infos{
         word-break: break-word;
